fix calcTimeJump and event height

--- a/src/app/Calendar/Content/Event/Event.style.scss
+++ b/src/app/Calendar/Content/Event/Event.style.scss
@@ -3,14 +3,15 @@
   width: 100%;
   min-height: 0;
   max-height: 100%;
-  background-color: #1aa3ff;
+  background-color: #007399;
   cursor: pointer;
   overflow: hidden;
   position: absolute;
-  border: 1px solid #000;
+  border: 1px solid #006080;
+  border-radius: 0.4rem;
+  color: #fff;
   &-title {
     text-align: center;
-    color: #000;
     font-size: 1.4rem;
   }
 }
