--- a/src/app/Calendar/Content/TimeCell/TimeCell.style.scss
+++ b/src/app/Calendar/Content/TimeCell/TimeCell.style.scss
@@ -2,7 +2,6 @@
   $height: 2rem;
   padding: 0 1.2rem;
   width: 100%;
-  border-bottom: 1px solid #ddd;
   border-left: 1px solid #ddd;
   border-right: 1px solid #ddd;
   min-height: $height;
@@ -10,4 +9,17 @@
   box-sizing: border-box;
   text-align: center;
   flex-flow: column nowrap;
+  position: relative;
+  &-data {
+    position: absolute;
+    top: -6px;
+    right: 1.2rem;
+  }
+  &-line {
+    border-bottom: 1px solid #ddd;
+    width: 0.8rem;
+    position: absolute;
+    right: 0;
+    height: 100%;
+  }
 }
