--- a/src/app/Calendar/Content/TimeColumn/TimeColumn.style.scss
+++ b/src/app/Calendar/Content/TimeColumn/TimeColumn.style.scss
@@ -1,4 +1,7 @@
 .time-column {
   display: flex;
   flex-direction: column;
+  .time-cell:last-child {
+    border-bottom: 1px solid #ddd;
+  }
 }
